# sem_iv_graphics

lab1/: gui.css  index.html
lab3/: ]  fuse.ts  global.d.ts  index.html  index.ts  package-lock.json  package.json
lab3/.cache/18001845/: meta.json
lab3/.cache/18001845/files/: 1.json  2.json  3.json  4.json  6.json  7.json
lab4/: CMakeLists.txt  main.cpp
lab4/.cache/clangd/index/: _fixes.hpp.9FF220F2DD8014AC.idx  _vectorize.hpp.E773DFAD7BD96153.idx  circle.cpp.1C607A20E2F5320D.idx  circle.cpp.9FE9647EF129AED5.idx  circle.h.26FAA6B701F208B4.idx  cocoa_init.m.2D762AB4BBDC84C5.idx  cocoa_joystick.h.67D3AB1433DDD69A.idx  cocoa_joystick.m.6FDE27B479EF8724.idx  cocoa_monitor.m.2A16EBDDDE76B68A.idx  cocoa_platform.h.85D143D3EA0B6D9C.idx  cocoa_time.c.9C0FD2B9996F4627.idx  cocoa_window.m.944C105A182188B9.idx  common.hpp.6CB89FD7402C1D9E.idx  compute_common.hpp.47B17C84773B6B01.idx  compute_vector_relational.hpp.DBD8F3850407F33B.idx  context.c.7859048553142105.idx  context.c.846CB8D850B8242D.idx  egl_context.c.5C62B35D5EAC343D.idx  egl_context.c.A1EBDAFF08DCC32E.idx  egl_context.h.93664C56CC493BB0.idx  egl_context.h.CF4357AB39A1458F.idx  ellipse.cpp.5A2F52A540054345.idx  ellipse.cpp.FA6E4A66653A1E87.idx  exponential.hpp.E31FF2EE10C8B16B.idx  func_common.inl.60DF424E38A625CB.idx  func_exponential.inl.5F42051BE5425F72.idx  func_geometric.inl.E689A9814A3AD4B9.idx  func_integer.inl.21FE3594BAB3B54A.idx  func_matrix.inl.1D77ABE2349DBD23.idx  func_packing.inl.7E5F276075D6C0BE.idx  func_trigonometric.inl.78BBB30477FAC249.idx  func_vector_relational.inl.568FCDE10D546EEC.idx  fwd.hpp.8D8EF32F5EAA7E50.idx  geometric.hpp.060932CA218B3E53.idx  glew.h.63BE6E6334298623.idx  glfw3.h.29A591506AD6E84A.idx  glfw3.h.742DFEF745517C83.idx  glm.hpp.5D5A9F56EE165565.idx  glx_context.c.09D8ACDAD4F37E7B.idx  glx_context.h.666266C8E5273F7E.idx  (+182 more)
lab4/primitives/: circle.cpp  circle.h  ellipse.cpp  ellipse.h
